Setup-kubernative-Cluster-Docker-Desktop/k8s-hello-world/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hello-k8s
